@@ -3,6 +3,10 @@
 # Verbose mode
 #export DH_VERBOSE=1
 
+PACKAGE_NAME=python-nova
+PACKAGE_DIR=$(CURDIR)/debian/$(PACKAGE_NAME)
+SITE_PACKAGES_DIR=$(PACKAGE_DIR)$(call py_libdir,$(shell pyversions -d))
+
 # Lucid does not have dh_python2, but we would like to be able to use this
 # rules file to build on lucid as well. Thus the branching logic.
 WITH_PYTHON2 = $(shell test -f /usr/bin/dh_python2 && echo "--with python2")
@@ -54,6 +58,17 @@ get-orig-source-git:
 
 override_dh_install:
 	dh_install
+	set -e; \
+	for lang in `find $(SITE_PACKAGES_DIR)/nova/locale\
+		-maxdepth 1 -mindepth 1 -type d -printf "%f "`;\
+	do\
+		mkdir -p $(PACKAGE_DIR)/usr/share/locale/$$lang/LC_MESSAGES;\
+		mv $(SITE_PACKAGES_DIR)/nova/locale/$$lang/LC_MESSAGES/nova.mo\
+		   $(PACKAGE_DIR)/usr/share/locale/$$lang/LC_MESSAGES;\
+		rm -rf $(SITE_PACKAGES_DIR)/nova/locale/$$lang;\
+	done
+	rm -f $(SITE_PACKAGES_DIR)/nova/locale/nova.pot
+
 	chmod 440 $(CURDIR)/debian/nova-common/etc/sudoers.d/nova_sudoers
 	install -D -m 0664 $(CURDIR)/debian/nova-volume.default	$(CURDIR)/debian/nova-volume/etc/default/nova-volume
 	for hypervisor in qemu kvm xen uml lxc; do \
